# stm8-sdcc-cmake

./: CMakeLists.txt  README.md
StdPeriph/: stm8_it.h  stm8l15x_conf.h
StdPeriph/STM8L10x/Libraries/STM8L10x_StdPeriph_Driver/inc/: stm8l10x.h  stm8l10x_awu.h  stm8l10x_beep.h  stm8l10x_clk.h  stm8l10x_comp.h  stm8l10x_exti.h  stm8l10x_flash.h  stm8l10x_gpio.h  stm8l10x_i2c.h  stm8l10x_irtim.h  stm8l10x_itc.h  stm8l10x_iwdg.h  stm8l10x_rst.h  stm8l10x_spi.h  stm8l10x_tim2.h  stm8l10x_tim3.h  stm8l10x_tim4.h  stm8l10x_usart.h  stm8l10x_wfe.h
StdPeriph/STM8L10x/Libraries/STM8L10x_StdPeriph_Driver/src/: stm8l10x_awu.c  stm8l10x_beep.c  stm8l10x_clk.c  stm8l10x_comp.c  stm8l10x_exti.c  stm8l10x_flash.c  stm8l10x_gpio.c  stm8l10x_i2c.c  stm8l10x_irtim.c  stm8l10x_itc.c  stm8l10x_iwdg.c  stm8l10x_rst.c  stm8l10x_spi.c  stm8l10x_tim2.c  stm8l10x_tim3.c  stm8l10x_tim4.c  stm8l10x_usart.c  stm8l10x_wfe.c
StdPeriph/STM8L15x-16x-05x/Libraries/STM8L15x_StdPeriph_Driver/inc/: stm8l15x.h
StdPeriph/sdcc/: stm8_it.h
cmake/: FindSTM8_StdPeriph.cmake  sdcc-generic.cmake  sdcc-stm8.cmake  sdcc-stm8l.cmake  sdcc-stm8s.cmake
stm8l-blinky/: CMakeLists.txt  blinky.c
stm8l-gpio/: CMakeLists.txt  main.c
